examples/admission-webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespaceprotects.hj.com
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $ca
    service:
      name: $svc
      namespace: $ns
      path: /validate-namespace
      port: 8443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-namespace.namespaceprotects.hj.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - namespaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $ca
    service:
      name: $svc_name
      namespace: $ns_name
      path: /validate-namespace
      port: 8443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-np-params.namespaceprotects.hj.com
  rules:
  - apiGroups:
    - hj.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - namespaceprotects
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
